impl find owners. close #46